--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "next-tinacms-github": "^1.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-tinacms-github": "^0.50.0",
+    "styled-components": "^5.3.0",
+    "tinacms": "^0.50.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
